--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,112 +1,8 @@
 {
-  "css.validate": false,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "emeraldwalk.runonsave": {
-    "commands": [
-      {
-        "match": "\\.(php)$",
-        "cmd": "vendor/bin/phpcbf ${file} & vendor/bin/phpcs ${file}"
-      }
-    ]
-  },
   "files.eol": "\n",
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
-  "intelephense.stubs": [
-    "apache",
-    "bcmath",
-    "bz2",
-    "calendar",
-    "com_dotnet",
-    "Core",
-    "ctype",
-    "curl",
-    "date",
-    "dba",
-    "dom",
-    "enchant",
-    "exif",
-    "FFI",
-    "fileinfo",
-    "filter",
-    "fpm",
-    "ftp",
-    "gd",
-    "gettext",
-    "gmp",
-    "hash",
-    "iconv",
-    "imap",
-    "intl",
-    "json",
-    "ldap",
-    "libxml",
-    "mbstring",
-    "meta",
-    "mysqli",
-    "oci8",
-    "odbc",
-    "openssl",
-    "pcntl",
-    "pcre",
-    "PDO",
-    "pdo_ibm",
-    "pdo_mysql",
-    "pdo_pgsql",
-    "pdo_sqlite",
-    "pgsql",
-    "Phar",
-    "posix",
-    "pspell",
-    "random",
-    "readline",
-    "Reflection",
-    "session",
-    "shmop",
-    "SimpleXML",
-    "snmp",
-    "soap",
-    "sockets",
-    "sodium",
-    "SPL",
-    "sqlite3",
-    "standard",
-    "superglobals",
-    "sysvmsg",
-    "sysvsem",
-    "sysvshm",
-    "tidy",
-    "tokenizer",
-    "xml",
-    "xmlreader",
-    "xmlrpc",
-    "xmlwriter",
-    "xsl",
-    "Zend OPcache",
-    "zip",
-    "zlib",
-    "wordpress"
-  ],
-  "less.validate": false,
-  "phpsab.executablePathCBF": "vendor/bin/phpcbf",
-  "phpsab.executablePathCS": "vendor/bin/phpcs",
-  "prettier.printWidth": 120,
-  "scss.validate": false,
-  "stylelint.configFile": "./.stylelintrc",
-  "stylelint.stylelintPath": "node_modules/stylelint",
-  "stylelint.validate": ["css", "scss"],
-  "[css]": {
-    "editor.codeActionsOnSave": {
-      "source.fixAll.stylelint": "explicit"
-    }
-  },
-  "[scss]": {
-    "editor.codeActionsOnSave": {
-      "source.fixAll.stylelint": "explicit"
-    }
-  },
-  "[php]": {
-    "editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
-  }
+  "prettier.printWidth": 120
 }
