--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "image-processor",
   "version": "1.0.0",
-  "dependencies": {
-    "ansi-colors": "^4.1.3",
-    "fancy-log": "^2.0.0",
-    "globule": "^1.3.4",
-    "p-limit": "^6.2.0",
-    "pretty-bytes": "^6.1.1",
-    "sharp": "^0.33.5"
+  "devDependencies": {
+    "@eslint/js": "9.18.0",
+    "ansi-colors": "4.1.3",
+    "eslint": "9.18.0",
+    "fancy-log": "2.0.0",
+    "globals": "15.14.0",
+    "globule": "1.3.4",
+    "p-limit": "6.2.0",
+    "pretty-bytes": "6.1.1",
+    "sharp": "0.33.5",
+    "typescript-eslint": "8.20.0"
   }
 }
