--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "globals": "15.14.0",
     "globule": "1.3.4",
     "p-limit": "6.2.0",
+    "prettier": "3.4.2",
     "pretty-bytes": "6.1.1",
     "sharp": "0.33.5",
     "typescript-eslint": "8.20.0"
