--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "devDependencies": {
     "@eslint/js": "9.18.0",
     "ansi-colors": "4.1.3",
+    "cspell": "8.17.2",
     "eslint": "9.18.0",
     "fancy-log": "2.0.0",
     "globals": "15.14.0",
     "globule": "1.3.4",
+    "markuplint": "4.11.4",
     "p-limit": "6.2.0",
     "prettier": "3.4.2",
     "pretty-bytes": "6.1.1",
