--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "image-processor",
   "version": "1.0.0",
+  "private": true,
   "devDependencies": {
     "@eslint/js": "9.18.0",
     "ansi-colors": "4.1.3",
