--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "image-processor",
   "version": "1.0.0",
   "private": true,
+  "volta": {
+    "node": "22.13.0",
+    "npm": "11.0.0"
+  },
   "devDependencies": {
     "@eslint/js": "9.18.0",
     "ansi-colors": "4.1.3",
